src/test/deca/syntax/invalid/renduInter01/05while_missing_condition.deca
{
    int x = 4;
    while ( ) {
        x = 3;
    }

}
